# lightsim2grid

./: .gitignore  .gitmodules  .readthedocs.yml  AUTHORS.txt  CHANGELOG.rst  CMakeLists.txt  DISCLAIMER.md  Dockerfile  MANIFEST.in  Makefile  README.md  basic_perf.py  compare_pandapower.py  env_compile_all.sh  old_setup.py.bk  pyklu.c  pyklu.h  pyklu.py  pyproject.toml  pyproject.toml.bk  requirements.txt  requirements_compile.txt  requirements_compile_ci.txt  setup.py  start_pandapower.py  test_dcpf.py  test_light_env.py
.circleci/: config.yml
benchmarks/: benchmark_dc_solvers.py  benchmark_gauss_seidel.py  benchmark_grid_size.py  benchmark_grid_size.sh  benchmark_py_g2op_version.py  benchmark_pypowysbl.sh  benchmark_solvers.py  benchmark_tolerance.py  benchmark_ts_ca.sh  benchmarks_ac.sh  benchmarks_dc.sh  compare_lightsim2grid_pypowsybl.py  debug_speed_improvments.py  do_nothing.py  greedy_powerline.py  greedy_topo.py  grid_size.py  launch_all_benchmark.sh  make_multiple_slack.py  req_benchmarks.txt  run_all_benchmarks.sh  (+6 more)
examples/external_solver/: CMakeLists.txt  DummyExternalAlgo.cpp  DummyExternalSolver.cpp  test_plugin.py
src/: BaseConstants.cpp  BaseConstants.h  BaseConstants.hpp  BaseFDPFSolver.h  BaseFDPFSolver.tpp  BaseMultiplePowerflow.cpp  BaseMultiplePowerflow.h  BaseNRSolver.cpp  BaseNRSolver.h  BaseNRSolver.tpp  BaseNRSolverSingleSlack.h  BaseNRSolverSingleSlack.tpp  BaseSolver.cpp  BaseSolver.h  BaseSubstation.cpp  BaseSubstation.h  BaseSubstation.hpp  BuiltinSolversRegistration.cpp  BuiltinSolversRegistration.hpp  CKTSOSolver.cpp  CKTSOSolver.h  CMakeLists.txt  ChooseSolver.cpp  ChooseSolver.h  ChooseSolver.hpp  Computers.cpp  Computers.h  CustTimer.h  CustTimer.hpp  DCSolver.cpp  DCSolver.h  DCSolver.tpp  DataConverter.cpp  DataConverter.h  DataConverter.hpp  DataDCLine.cpp  DataDCLine.h  DataGen.cpp  DataGen.h  DataGeneric.cpp  (+50 more)
src/batch_algorithm/: BaseBatchSolverSynch.cpp  BaseBatchSolverSynch.h  BaseBatchSolverSynch.hpp  ContingencyAnalysis.cpp  ContingencyAnalysis.h  ContingencyAnalysis.hpp  TimeSeries.cpp  TimeSeries.h  TimeSeries.hpp
src/bindings/python/: CMakeLists.txt  binding_batch.cpp  binding_containers.cpp  binding_declarations.hpp  binding_enums.cpp  binding_gridmodel.cpp  binding_lsgrid.cpp  binding_misc.cpp  binding_module.cpp  binding_solvers.cpp  pickle_helpers.hpp
src/core/: AlgoConfig.hpp  AlgorithmRegistry.cpp  AlgorithmRegistry.hpp  AlgorithmSelector.cpp  AlgorithmSelector.hpp  AlgorithmTypeNames.cpp  AlgorithmTypeNames.hpp  BaseConstants.hpp  BuiltinSolversRegistration.cpp  BuiltinSolversRegistration.hpp  CMakeLists.txt  ChooseSolver.hpp  CustTimer.hpp  GridModel.cpp  GridModel.hpp  IIDMConverter.cpp  IIDMConverter.hpp  LSGrid.cpp  LSGrid.hpp  SolverInstantiations.cpp  SolverRegistry.cpp  SolverRegistry.hpp  SolverTypeNames.hpp  Solvers.hpp  SubstationContainer.cpp  SubstationContainer.hpp  TaggedIdVec.hpp  Utils.cpp  Utils.hpp  help_fun_msg.cpp  help_fun_msg.hpp  ls2g_api.hpp
src/core/batch_algorithm/: BaseBatchSolverSynch.cpp  BaseBatchSolverSynch.hpp  CMakeLists.txt  ContingencyAnalysis.cpp  ContingencyAnalysis.hpp  TimeSeries.cpp  TimeSeries.hpp
src/core/cmake/: lightsim2grid_coreConfig.cmake.in
src/core/element_container/: CMakeLists.txt  Container_IteratorUtils.hpp  DCLineContainer.cpp  DCLineContainer.hpp  GeneratorContainer.cpp  GeneratorContainer.hpp  GenericContainer.cpp  GenericContainer.hpp  LineContainer.cpp  LineContainer.hpp  LoadContainer.cpp  LoadContainer.hpp  OneSideContainer.hpp  OneSideContainer_PQ.hpp  OneSideContainer_forBranch.hpp  SGenContainer.hpp  ShuntContainer.cpp  ShuntContainer.hpp  TrafoContainer.cpp  TrafoContainer.hpp  TwoSidesContainer.hpp  TwoSidesContainer_rxh_A.hpp
src/core/linear_solvers/: CKTSOSolver.cpp  CKTSOSolver.hpp  CMakeLists.txt  KLUSolver.cpp  KLUSolver.hpp  NICSLUSolver.cpp  NICSLUSolver.hpp  SparseLUSolver.cpp  SparseLUSolver.hpp
src/core/powerflow_algorithm/: BaseAlgo.cpp  BaseAlgo.hpp  BaseDCAlgo.hpp  BaseFDPFAlgo.hpp  BaseNRAlgo.hpp  BaseNRAlgo.tpp  BaseNRSingleSlackAlgo.hpp  BaseNRSingleSlackAlgo.tpp  CMakeLists.txt  GaussSeidelAlgo.cpp  GaussSeidelAlgo.hpp  GaussSeidelSynchAlgo.cpp  GaussSeidelSynchAlgo.hpp  MultiSlackNRSystem.hpp  MultiSlackNRSystem.tpp  NRAlgo.hpp  NRAlgo.tpp  NRLayout.hpp  NRSystem.hpp  NRSystem.tpp  RefactorPolicies.hpp  ScalingPolicies.hpp  ScalingPolicies.tpp  SingleSlackNRSystem.hpp  SingleSlackNRSystem.tpp  SlackPolicies.hpp  SlackPolicies.tpp
src/element_container/: CMakeLists.txt  Container_IteratorUtils.hpp  DCLineContainer.cpp  DCLineContainer.h  DCLineContainer.hpp  GeneratorContainer.cpp  GeneratorContainer.h  GeneratorContainer.hpp  GenericContainer.cpp  GenericContainer.h  GenericContainer.hpp  LineContainer.cpp  LineContainer.h  LineContainer.hpp  LoadContainer.cpp  LoadContainer.h  LoadContainer.hpp  OneSideContainer.cpp  OneSideContainer.h  OneSideContainer.hpp  OneSideContainer_PQ.h  OneSideContainer_PQ.hpp  OneSideContainer_forBranch.hpp  SGenContainer.cpp  SGenContainer.h  SGenContainer.hpp  ShuntContainer.cpp  ShuntContainer.h  ShuntContainer.hpp  TrafoContainer.cpp  TrafoContainer.h  TrafoContainer.hpp  TwoSidesContainer.h  TwoSidesContainer.hpp  TwoSidesContainer_A.hpp  TwoSidesContainer_rxh_A.hpp
src/light_env/: inj_action.h  inj_action.hpp  light_env.h  light_env.hpp  light_env_utils.h  protections.h  protections.hpp  topo_action.h  topo_action.hpp
src/linear_solvers/: CKTSOSolver.cpp  CKTSOSolver.h  CKTSOSolver.hpp  CMakeLists.txt  KLUSolver.cpp  KLUSolver.h  KLUSolver.hpp  NICSLUSolver.cpp  NICSLUSolver.h  NICSLUSolver.hpp  SparseLUSolver.cpp  SparseLUSolver.h  SparseLUSolver.hpp
src/powerflow_algorithm/: BaseAlgo.cpp  BaseAlgo.h  BaseAlgo.hpp  BaseDCAlgo.h  BaseDCAlgo.hpp  BaseDCAlgo.tpp  BaseFDPFAlgo.h  BaseFDPFAlgo.hpp  BaseFDPFAlgo.tpp  BaseNRAlgo.h  BaseNRAlgo.hpp  BaseNRAlgo.tpp  BaseNRSingleSlackAlgo.h  BaseNRSingleSlackAlgo.hpp  BaseNRSingleSlackAlgo.tpp  CMakeLists.txt  GaussSeidelAlgo.cpp  GaussSeidelAlgo.h  GaussSeidelAlgo.hpp  GaussSeidelSynchAlgo.cpp  GaussSeidelSynchAlgo.h  GaussSeidelSynchAlgo.hpp
(+324 files in other folders)
